# app_commons

./: Cargo.toml
SQL/: sample_db.sql
src/: error.rs  lib.rs
src/app_commons/: app_service.rs  mod.rs
src/application/: app_service.rs  mod.rs  transfers.rs
src/application/sea_orm/: authenticate.rs  mod.rs  product_register.rs  product_search.rs  provider.rs
src/domain/: entities.rs  mod.rs  repositories.rs  services.rs
src/domain/values/: categories.rs  mod.rs  products.rs  users.rs
src/infrastructure/: converter.rs  mod.rs  pool.rs
src/infrastructure/sea_orm/: converter_impl.rs  mod.rs  pool_impl.rs
src/infrastructure/sea_orm/models/: mod.rs  prelude.rs  product.rs  product_category.rs  user.rs
src/infrastructure/sea_orm/repositories/: category.rs  mod.rs  product.rs  user.rs
src/presentation/: forms.rs  jwt.rs  validate.rs
src/service/sea_orm/: category.rs  product.rs  user.rs
src/view_commons/: forms.rs  jwt.rs  mod.rs
