[package]
name = "app_commons"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix       =   "0.13.0"
env_logger  =   "0.9.0"
log         =   "0.4.17"
dotenv      =   "0.15.0"
async-trait =   "0.1.56"
serde       =   { version = "1.0.138", features = ["derive"] }
easy-hasher =   "2.2.1"
thiserror   =   "1.0.32"
anyhow      =   "1.0.62"
sea-orm     =   { version = "0.9.1" , features=["sqlx-postgres" , "runtime-tokio-rustls" , "macros"] , default-features = false}
#uuid = { version = "1.1.2" ,features = [
#    "v4",                # バージョン4を利用する
#    "fast-rng",          # 高速なRNGを利用する
#    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
#] }
# UUIDの生成
uuid = { version = "1.1.2" ,features = ["v4" , "fast-rng" , "macro-diagnostics"] }
# 通貨フォーマット変換
rusty-money =   { version = "0.4.1", features = ["iso", "crypto"] }
# 値の検証
validator   =   { version = "0.16.0", features = ["derive"] }
# JWT
jsonwebtoken = "8.1.1"
serde_json = "1.0.85"